--- a/.pylintrc
+++ b/.pylintrc
@@ -1,2 +1,9 @@
+[MASTER]
+extension-pkg-whitelist=ephem,matplotlib,matplotlib.cm,numpy
+
 [MESSAGES CONTROL]
 disable=bad-whitespace,line-too-long,missing-docstring,too-many-locals
+
+[TYPECHECK]
+ignored-classes=ephem,matplotlib,matplotlib.cm,numpy
+ignored-modules=ephem,matplotlib,matplotlib.cm,numpy
